lib_LTLIBRARIES = libparfait.la

include_HEADERS = \
    Adt.h \
    Adt.hpp \
    Adt3dExtent.h \
    Adt3dExtent.hpp \
    Adt3dPoint.h \
    Adt3dPoint.hpp \
    BarChart.h \
    Barycentric.h \
    ByteSwap.h \
    CGNSElements.h \
    CGNSFaceExtraction.h \
    CRS.h \
    CartBlock.h \
    CartBlock.hpp \
    CartBlockVisualize.h \
    CellWindingConverters.h \
    CellContainmentChecker.h \
    CellTesselator.h \
    Checkpoint.h \
    CommandLine.h \
    CommandLineMenu.h \
    ConsoleRedirect.h \
    ContiguousMatrixMultiplication.h \
    DataFrame.h \
    DataFrameTools.h \
    Decompositions.h \
    DenseMatrix.h \
    Dictionary.h \
    DictionaryEntry.h \
    DictionaryRules.h \
    DictionarySchemaValidator.h \
    DistanceTree.h \
    DistanceTree.hpp \
    DualMetrics.h \
    EdgeBuilder.h \
    EdgeSegmentProjection.h \
    Edges.h \
    Ellipsoid.h \
    Entity.h \
    Exception.h \
    Extent.h \
    Extent.hpp \
    ExtentBuilder.h \
    ExtentMeshWrapper.h \
    ExtentWriter.h \
    ExtentWriter.hpp \
    Facet.h \
    Facet.hpp \
    FacetIntersection.h \
    Facetize.h \
    FloatingPointExceptions.h \
    FileTools.h \
    Flatten.h \
    FortranSyntax.h \
    FortranUnformatted.h \
    GammaIO.h \
    GraphColoring.h \
    GraphDistance.h \
    GraphOrderings.h \
    GraphPlotter.h \
    GreedyColoring.h \
    HermiteSpline.h \
    ImpliedMetric.h \
    ImportedUgrid.h \
    ImportedUgrid.hpp \
    ImportedUgridFactory.h \
    Inspector.h \
    Interpolation.h \
    Intersections.h \
    JsonCommon.h \
    JsonParser.h \
    JsonPrinters.h \
    KMeans.h \
    LagrangeTriangle.h \
    LagrangeTriangle.hpp \
    LaplacianSmoothing.h \
    LeastSquaresReconstruction.h \
    Lexer.h \
    LinePlotters.h \
    LinePlotters.hpp \
    LinearAlgebra.h \
    LinearPartitioner.h \
    LinearPartitioner.hpp \
    Linspace.h \
    MapTools.h \
    MapbcParser.h \
    MapbcReader.h \
    MapbcReader.hpp \
    MapbcWriter.h \
    MarchingCubes.h \
    MatrixBase.h \
    MatrixMarketReader.h \
    MatrixOperations.h \
    MatrixStorage.h \
    MetricDecomposition.h \
    MetricTensor.h \
    Metrics.h \
    MinimumStorageSet.h \
    Morton.h \
    MotionMatrix.h \
    MotionMatrix.hpp \
    MovingAverages.h \
    Namelist.h \
    NamelistParser.h \
    NodeToCell.h \
    NodeToNode.h \
    NodeToNode.hpp \
    Normals.h \
    ObjReader.h \
    Octree.h \
    OctreeRasterizer.h \
    OctreeStorage.h \
    OmlParser.h \
    ParallelExtent.h \
    ParfaitMacros.h \
    Plane.h \
    Plot3DReader.h \
    Plot3DWriter.h \
    Point.h \
    Point.hpp \
    PointGenerator.h \
    PointwiseSources.h \
    PointWriter.h \
    PolygonClipping.h \
    PomlParser.h \
    RecursiveBisection.h \
    RecursiveBisection.hpp \
    RegexMatchers.h \
    Region.h \
    RegionFactory.h \
    RewindLeftHandedElements.h \
    RingBuffer.h \
    StackTrace.h \
    STL.h \
    STL.hpp \
    STLFactory.h \
    STLReader.h \
    STLReader.hpp \
    Segment.h \
    SetTools.h \
    Shell.h \
    SparseMatrix.h \
    SparseMatrix.hpp \
    Sphere.h \
    StitchMesh.h \
    StringTools.h \
    SyncField.h \
    SyncPattern.h \
    TaubinSmoothing.h \
    TecplotBinaryHelpers.h \
    TecplotBinaryReader.h \
    TecplotBinaryWriter.h \
    TecplotBinaryWriter.hpp \
    TecplotBrickCollapse.h \
    TecplotWriter.h \
    TecplotWriter.hpp \
    TetGenWriter.h \
    Throw.h \
    Timing.h \
    Timing.hpp \
    ToString.h \
    Topology.h \
    TriReader.h \
    UgridReader.h \
    UgridReader.hpp \
    UgridWriter.h \
    UgridWriter.hpp \
    UniquePoints.h \
    UnitTransformer.h \
    VTKElements.h \
    VTKWriter.h \
    VTKWriter.hpp \
    VectorTools.h \
    VizualizationWriter.h \
    VolumeMeshAdapter.h \
    VolumeMeshInterface.h \
    Wiggle.h

libparfait_la_SOURCES = \
    DataFrame.cpp \
    Dictionary.cpp \
    DictionaryRules.cpp \
    StringTools.cpp \
    ToString.cpp \
    FileTools.cpp \
    MetricDecomposition.cpp \
    Sphere.cpp

default_ldadd = libparfait.la
